--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "url": "https://github.com/understrap/understrap/issues"
   },
   "homepage": "https://understrap.com",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
@@ -47,5 +46,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "postcss": "^8.2.9"
+  },
+  "dependencies": {
+    "gulp-livereload": "^4.0.2"
   }
 }
